--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
     <!--商品展示区域开始-->
     <div id="myDisplay" class="middle">
         <div class="left">
-            一个月没出门，照片太帅无法显示
+            <img src="img/chengxuyuan.jpg" alt="">
         </div>
         <div class="right">
             <div class="title">
-                <p>前端开发 了解HTML、CSS及JavaScript在PC端及移动端的部署</p>
+                <p>前端开发 了解HTML、CSS及JavaScript在PC端、移动端以及微信小程序的部署</p>
                 <span>注：疫情期间自1月23日至今始终在家隔离，未与外来人员接触。家中人员疫情期间均单人单室工作，无接触传播风险！</span>
             </div>
             <div class="price">
@@ -159,10 +159,10 @@
                 <li><img src="./img/skill/css.png" alt=""/></li>
                 <li><img src="./img/skill/js.png" alt=""/></li>
                 <li><img src="./img/skill/jquery.png" alt=""/></li>
-                <li><img src="" alt="继续提高"/></li>
                 <li><img src="./img/skill/node.png" alt=""/></li>
                 <li><img src="./img/skill/ws.png" alt=""/></li>
                 <li><img src="./img/skill/ps.png" alt=""/></li>
+                <li><img src="./img/skill/xcx.png" alt=""/></li>
                 <li><img src="./img/skill/git.png" alt=""/></li>
             </ul>
         </div>
@@ -202,14 +202,15 @@
             <div class="up">
                 <div class="left"><p>技能总结</p></div>
                 <ul class="right">
-                    <li>掌握html，手写符合w3c标准的代码；用div+CSS布局常见页面，高度还原设计搞；</li>
+                    <li>掌握html，能够手写符合w3c标准的代码；用div+CSS布局常见页面，高度还原设计搞；</li>
                     <li>了解模块化开发的思路和原理，提高代码的复用性，可针对项目实际进行模块化开发，具备工程化的思维和实践经验；</li>
                     <li>JS基础扎实，掌握常用的插件以提高工作效率；可用原生JS封装针对特定逻辑的类库；不借助第三方类库和框架可进行项目开发；</li>
                     <li>了解HTTP协议和TCP/IP协议,了解浏览器和服务器交互机制</li>
                     <li>对Web前端技术有浓厚的兴趣，善用搜索引擎，较强的自学能力和对新技术的追求精神，乐于分享；</li>
-                    <li>有使用HTML5+CSS3进行移动端WEB页面的开发经验和案例；</li>
+                    <li>有使用HTML5+CSS3进行移动端WEB页面制作的经验和案例；</li>
+                    <li>有使用原生JavaScript进行微信小程序页面制作的经验和案例；</li>
                     <li>了解Python和Java等常用后端语言的原生代码，由使用Python进行爬虫的经验；</li>
-                    <li>使用git工具进行团队合作,了解npm，bower包管理工具</li>
+                    <li>使用git工具进行团队合作。</li>
                 </ul>
             </div>
         </div>
