--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
         <div class="explain" id="explain">       
             <a href="./img/onmouseover2.jpg" class="header-list list2"><img src="./img/qianduan.gif" alt=""/></a>
             <div class="phone-nub">
-                <img src="img/phone.gif" alt="">
-                13718014930
+                <img src="img/phone.gif" alt="">&微信:13718014930
             </div>
         </div>
     </div>
@@ -135,15 +134,15 @@
                 </li>
                 <li>
                     <div class="local"></div>
-                    <p>北京市海淀区（目前所在地）</p>
+                    <p>北京市海淀区（目前所在地，在京租房）</p>
                 </li>
                 <li>
                     <div class="edu"></div>
-                    <p>大学本科</p>
+                    <p>籍贯：吉林省长春市</p>
                 </li>
                 <li>
                     <div class="work"></div>
-                    <p>2019年6月参加工作</p>
+                    <p>北京科技大学 本科</p>
                 </li>
                 <li>
                     <div class="marry"></div>
@@ -181,6 +180,7 @@
                     <p>学校：北京科技大学</p>
                     <p>学历：本科</p>
                     <p>专业：信息与计算科学；</p>
+                    <p>主修课程：数据结构算法、HTML/CSS/JavaScript/Python等编程语言基础</p>
                 </div>
             </div>
             <div class="menu-child">
@@ -188,7 +188,8 @@
                 <div class="menu-child-body">
                     <p>公司：中国农业科学院农业信息研究所大数据研究中心</p>
                     <p>职位：科研助理</p>
-                    <p>工作：辅助进行科研课题，编写代码、撰写专利、论文、投标文件、会议报告等；</p>
+                    <p>工作：辅助进行科研课题，编写Python爬虫、MATLAB处理数据等代码、参与发表2篇EI论文、撰写3篇专利、若干投标文件、会议报告等；</p>
+                    <p>工作心得：在工作期间接触到了前后端多种常用编程语言。我认为：5G时代的来临将加速web和各类小程序取代传统的客户端的步伐，前端具有广阔的前景和发展空间。</p>
                 </div>
             </div>       
         </div>
