--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div id="contactInformation">
                 <a href="javascript:;" class="advice">微信：13718014930</a>
                 <a href="javascript:;" class="phone">电话：137-1801-4930</a>
-                <a href="javascript:;" class="email">邮箱：13718014930@qq.com</a>
+                <a href="javascript:;" class="email">邮箱：13718014930@163.com</a>
             </div>
         </div>
     </div>
@@ -204,14 +204,14 @@
                 <div class="left"><p>技能总结</p></div>
                 <ul class="right">
                     <li>掌握html，能够手写符合w3c标准的代码；用div+CSS布局常见页面，高度还原设计搞；</li>
-                    <li>了解模块化开发的思路和原理，提高代码的复用性，可针对项目实际进行模块化开发，具备工程化的思维和实践经验；</li>
-                    <li>JS基础扎实，掌握常用的插件以提高工作效率；可用原生JS封装针对特定逻辑的类库；不借助第三方类库和框架可进行项目开发；</li>
+                    <li>了解模块化开发的思路和原理，提高代码的复用性，可针对项目实际进行模块化开发，具备工程化的思维；</li>
+                    <li>JavaScript基础扎实，了解常用的插件和jQuery/vue等框架；</li>
                     <li>了解HTTP协议和TCP/IP协议,了解浏览器和服务器交互机制</li>
                     <li>对Web前端技术有浓厚的兴趣，善用搜索引擎，较强的自学能力和对新技术的追求精神，乐于分享；</li>
                     <li>有使用HTML5+CSS3进行移动端WEB页面制作的经验和案例；</li>
-                    <li>有使用原生JavaScript进行微信小程序页面制作的经验和案例；</li>
-                    <li>了解Python和Java等常用后端语言的原生代码，由使用Python进行爬虫的经验；</li>
-                    <li>使用git工具进行团队合作。</li>
+                    <li>了解微信小程序开发框架及组件，有进行微信小程序页面制作的经验和案例；</li>
+                    <li>了解Python和Java等常用后端语言的原生代码，有编写Python爬虫脚本的经验；</li>
+                    <li>能够使用git等工具进行团队合作。</li>
                 </ul>
             </div>
         </div>
