--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="right">
             <div class="title">
                 <p>前端开发 了解HTML、CSS及JavaScript在PC端、移动端以及微信小程序的部署</p>
-                <span>注：疫情期间自1月23日至今始终在家隔离，未与外来人员接触。家中人员疫情期间均单人单室工作，无接触传播风险！</span>
+                <span>注：疫情期间自1月23日至今始终在家隔离，未与外来人员接触！</span>
             </div>
             <div class="price">
                 <p class="introduces mall-price">价格</p>
@@ -231,13 +231,13 @@
             <li>
                 <h3>入职时间</h3>
                 <div>
-                    <a>确定入职后，可随时到岗</a>
+                    <a class="center">确定入职后，可随时到岗</a>
                 </div>
             </li>
             <li>
                 <h3>岗位期望</h3>
                 <div>
-                    <a>WEB前端开发</a>
+                    <a>前端开发(PC端/移动端/小程序均可)</a>
                     <a>可以在工作中同时学习提升代码能力</a>
                     <a>双休或单休岗位(紧急项目上线时可接受无休)</a>
                     <a>周一至周五可以接受高强度加班</a>
