--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 </li>
                 <li>
                     <div class="local"></div>
-                    <p>北京市海淀区（目前所在地，在京租房）</p>
+                    <p>北京市海淀区（目前所在地）</p>
                 </li>
                 <li>
                     <div class="edu"></div>
