--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             <li>
                 <h3>职业素质</h3>
                 <div>
-                    <a>态度+执行力是我学习和工作的追求，具有优先的团队意识和吃苦耐劳精神；如果工作中遇到棘手的事或者紧急项目，我不会找借口和拖进程，就算是加班到深夜，我也会先把事情给做好；假如项目中需要用到从未使用过的新技术/新框架，我相信我可以最快速度的用它来干活；对项目表现层和界面设计有非常浓厚的兴趣</a>
+                    <a>态度+执行力是我学习和工作的追求，具有优秀的团队意识和吃苦耐劳精神；如果工作中遇到棘手的事或者紧急项目，我不会找借口和拖进程，就算是加班到深夜，我也会先把事情给做好；假如项目中需要用到从未使用过的新技术/新框架，我相信我可以最快速度的用它来干活；对项目表现层和界面设计有非常浓厚的兴趣</a>
                 </div>
 
             </li>
