--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
         <div class="right">
             <div class="title">
-                <p>前端开发 了解HTML、CSS及JavaScript在PC端、移动端以及微信小程序的部署</p>
+                <p>前端开发 了解HTML、CSS及JavaScript在PC端以及移动端的常见部署</p>
                 <span>注：疫情期间自1月23日至今始终在家隔离，未与外来人员接触！</span>
             </div>
             <div class="price">
