--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@
     </div>
     <!--商品展示区域结束-->
 
+
+    
     <!--第二个导航条区域开始-->
     <div id="twoNav" class="middle">
         <a href="#twoNav" class="nav select">个人简介</a>
@@ -205,10 +207,11 @@
                 <div class="left"><p>技能总结</p></div>
                 <ul class="right">
                     <li>掌握html，能够手写符合w3c标准的代码；用div+CSS布局常见页面，高度还原设计搞；</li>
-                    <li>了解模块化开发的思路和原理，提高代码的复用性，可针对项目实际进行模块化开发，具备工程化的思维；</li>
+                    <li>了解模块化开发的思路和原理，提高代码的复用性，具备工程化的思维；</li>
                     <li>JavaScript基础扎实，了解常用的插件和jQuery/vue等框架；</li>
                     <li>了解HTTP协议和TCP/IP协议,了解浏览器和服务器交互机制</li>
-                    <li>对Web前端技术有浓厚的兴趣，善用搜索引擎，较强的自学能力和对新技术的追求精神，乐于分享；</li>
+                    <li>英语通过CET-6级，可以独立阅读英文技术文档；</li>
+                    <li>对Web前端技术有浓厚的兴趣，具备较强的自学能力和对新技术的追求精神，乐于分享；</li>
                     <li>有使用HTML5+CSS3进行移动端WEB页面制作的经验和案例；</li>
                     <li>了解微信小程序开发框架及组件，有进行微信小程序页面制作的经验和案例；</li>
                     <li>了解Python和Java等常用后端语言的原生代码，有编写Python爬虫脚本的经验；</li>
@@ -225,7 +228,10 @@
             <li>
                 <h3>职业素质</h3>
                 <div>
-                    <a>态度+执行力是我学习和工作的追求，具有优秀的团队意识和吃苦耐劳精神；如果工作中遇到棘手的事或者紧急项目，我不会找借口和拖进程，就算是加班到深夜，我也会先把事情给做好；假如项目中需要用到从未使用过的新技术/新框架，我相信我可以最快速度的用它来干活；对项目表现层和界面设计有非常浓厚的兴趣</a>
+                    <a>态度+执行力是我学习和工作的追求，具有优秀的团队意识和吃苦耐劳精神；
+                        如果工作中遇到棘手的事或者紧急项目，我不会找借口和拖进程，就算是加班到深夜，
+                        我也会先把事情给做好；假如项目中需要用到从未使用过的新技术/新框架，
+                        我相信我可以最快速度的用它来干活；对项目表现层和界面设计有非常浓厚的兴趣</a>
                 </div>
 
             </li>
