--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <div id="nav" class="middle">
             <ul>
                 <li >首页</li>
+                <li><a href="page.html">朴素版简历</a></li>
                 <li id="contact">联系方式</li>
             </ul>
             <div id="contactInformation">
