--- a/page.html
+++ b/page.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="css/page.css">
 </head>
 <body>
+    <!-- 个人信息部分开始 -->
     <table class="introduction">
         <tr>
             <th colspan="7">求职意向：前端工程师</th>
         </tr>
          <tr>
-            <th class="special" colspan="7">注：在国家确认重大疫情期间，本人自1月23日起至今均在家隔离，未与外来人员接触！</th>
+            <th class="special" colspan="7">注：在国家确认重大疫情期间，本人自1月23日起至今均在家隔离，未与外来人员接触！
+                疫情期间可以接受远程办公</th>
          </tr>
         <tr>
             <th>姓名:</th>
@@ -21,8 +23,8 @@
             <td>24</td>
             <th>性别:</th>
             <td>男</td>
-            <td rowspan="3" width="100" class="photo">
-                    <img src="img/chengxuyuan.jpg" alt="" title="程序员">
+            <td rowspan="3" class="photo">
+                <img src="img/chengxuyuan.jpg" alt="" title="程序员">
             </td>
         </tr>        
         <tr>
@@ -39,69 +41,73 @@
             <th>专业:</th>
             <td>信息与计算科学</td>
             <th>学历:</th>
-            <td>本科</td>
+            <td>全日制本科</td>
         </tr>        
         <tr>
              <th>微信&手机:</th>
              <td>13718014930</td>
-             <th>QQ:</th>
-             <td>770778181</td>
+             <th>GitHub:</th>
+             <td>github.com/starduct</td>
              <th>邮箱:</th>
              <td colspan="2"><a  href="13718014930@163.com">13718014930@163.com</a></td>
-        </tr>
-        <tr>
-            <th colspan="7">到岗时间：确认入职后可随时到岗，由于疫情特殊时期，可以远程办公</th>
-        </tr>      
-        <tr>
-            <th colspan="7">薪资要求：6000-8000元，可面议；最长可接受6个月以内的实习</th>
-        </tr>
+        </tr>  
     </table>
+    <!-- 个人信息部分结束 -->
+    <!-- 经验技能部分开始 -->
     <table class="experience">
         <tr>
             <th>专业技能</th>
             <td colspan="6">
                 <ul class="right">
-                    <li>掌握html，能够手写符合w3c标准的代码；用div+CSS布局常见页面，高度还原设计搞；</li>
-                    <li>了解模块化开发的思路和原理，提高代码的复用性，可进行模块化开发，具备工程化的思维；</li>
-                    <li>JavaScript基础扎实，了解常用的插件和jQuery/Vue等框架；</li>
+                    <li>掌握html，能够手写符合<span>w3c标准</span>的代码；用div+CSS布局常见页面，<span>像素级</span>还原设计搞；</li>
+                    <li>了解<span>模块化开发</span>的思路和原理，提高代码的复用性，可进行模块化开发，具备工程化的思维；</li>
+                    <li>JavaScript基础扎实，了解常用的插件和<span>jQuery</span>/<span>Vue</span>等框架；</li>
                     <li>了解HTTP协议和TCP/IP协议,了解浏览器和服务器交互机制</li>
-                    <li>英语通过CET-6级，可以独立阅读英文技术文档以及英文网站；</li>
+                    <li>英语通过<span>CET-6</span>级，可以独立阅读英文技术文档以及英文网站；</li>
                     <li>对Web前端技术有浓厚的兴趣，具备较强的自学能力和对新技术的追求精神，乐于分享；</li>
-                    <li>有使用HTML5+CSS3进行移动端WEB页面制作的经验和案例；</li>
-                    <li>了解微信小程序开发框架及组件，有进行微信小程序页面制作的经验和案例；</li>
+                    <li>有使用<span>HTML5+CSS3</span>进行移动端WEB页面制作的经验和案例；</li>
+                    <li>了解<span>微信小程序</span>开发框架及组件，有进行微信小程序页面制作的经验和案例；</li>
                     <li>了解Python和Java等常用后端语言的原生代码，有编写Python爬虫脚本的经验；</li>
-                    <li>能够使用git等工具进行团队合作。</li>
+                    <li>能够使用<span>git</span>等工具进行团队合作。</li>
                 </ul>
             </td>
         </tr>
-
         <tr>
-            <th>学习&工作</th>
+            <th>工作经历</th>
             <td colspan="6">               
-                <div class="study">
-                    <p>2015年9月--2019年6月</p>
-                    <p>学校：北京科技大学</p>
-                    <p>学历：本科</p>
-                    <p>专业：信息与计算科学；</p>
-                    <p>主修课程：数据结构算法、HTML/CSS/JavaScript/Python等编程语言基础</p>
-                </div>
                 <div>
-                    <p>2019年6月--2019年12月</p>
+                    <p>2019年4月--2019年9月</p>
                     <p>公司：中国农业科学院农业信息研究所</p>
                     <p>职位：科研助理</p>
                     <p>工作：辅助进行科研课题，编写Python爬虫、MATLAB处理数据等代码、参与发表2篇EI论文、投稿3篇专利进入审核、若干投标文件、会议报告等；</p>
                     <p>工作心得：在工作期间接触到了前后端多种常用编程语言，同时了解到从业人员对于未来互联网与5G相结合发展的预测和规划。我认为：5G时代的来临将加速网页和各类小程序在移动端和PC端上取代传统的客户端模式的步伐，前端具有广阔的前景和发展空间。</p>
                 </div>            
-        </tr>         
+        </tr>
         <tr>
-            <th> 自我评价</th>
+            <th>项目经历</th>
+            <td colspan="6">
+                <div class="borderBottom">
+                    <p>easyPage</p>
+                    <p>基于Vue全家桶；</p>
+                    <p>集成在线备忘录+天气查询+音乐播放功能的单页面综合应用，并运用了Vue全家桶以应对复杂交互，性能优化等场景。
+                        该项目的性能优化、UI组件封装均为独立完成。
+                    </p>
+                </div>               
+                <div>
+                    <p>优购物电商平台</p>
+                    <p>基于HTML/CSS和jQuery框架；</p>
+                    <p>负责按照设计稿完成网页搭建，并通过jQuery框架实现轮播图、电梯导航等效果；
+                        <br> 并制作了仿电商商品页简历，到我的GitHub仓库<a href="https://starduct.github.io/resume/">https://starduct.github.io/resume/</a> ，
+                        同时链接有正常的网页简历（这份简历）<a href="https://starduct.github.io/resume/page.html">https://starduct.github.io/resume/page.html</a> 
+                    </p>
+                </div>            
+        </tr>          
+        <tr>
+            <th>自我评价</th>
             <td colspan="6">
             <p>态度+执行力是我学习和工作的追求，具有优秀的团队意识和吃苦耐劳精神；如果工作中遇到棘手的事或者紧急项目，我不会找借口和拖进程，就算是加班到深夜，我也会先把事情给做好；假如项目中需要用到从未使用过的新技术/新框架，我相信我可以最快速度的用它来干活；对项目表现层和界面设计有非常浓厚的兴趣</p>
-
         </tr>
     </table>
-        
-         
-
+    <!-- 经验技能部分结束 -->
 </body>
 </html>
