--- a/page.html
+++ b/page.html
@@ -13,8 +13,8 @@
             <th colspan="7">求职意向：前端工程师</th>
         </tr>
          <tr>
-            <th class="special" colspan="7">注：在国家确认重大疫情期间，本人自1月23日起至今均在家隔离，未与外来人员接触！
-                疫情期间可以接受远程办公</th>
+            <th class="special" colspan="7">注：在国家确认重大疫情期间，本人自1月23日起至今均在北京家中隔离，未与外来人员接触！
+                疫情期间可以远程办公</th>
          </tr>
         <tr>
             <th>姓名:</th>
@@ -61,30 +61,30 @@
                 <ul class="right">
                     <li>掌握html，能够手写符合<span>w3c标准</span>的代码；用div+CSS布局常见页面，<span>像素级</span>还原设计搞；</li>
                     <li>了解<span>模块化开发</span>的思路和原理，提高代码的复用性，可进行模块化开发，具备工程化的思维；</li>
-                    <li>JavaScript基础扎实，了解常用的插件和<span>jQuery</span>/<span>Vue</span>等框架；</li>
+                    <li>JavaScript基础扎实，了解<span>ES5/6新特性</span>以及常用的插件和<span>jQuery</span>/<span>Vue</span>等框架；</li>
                     <li>了解HTTP协议和TCP/IP协议,了解浏览器和服务器交互机制</li>
                     <li>英语通过<span>CET-6</span>级，可以独立阅读英文技术文档以及英文网站；</li>
                     <li>对Web前端技术有浓厚的兴趣，具备较强的自学能力和对新技术的追求精神，乐于分享；</li>
                     <li>有使用<span>HTML5+CSS3</span>进行移动端WEB页面制作的经验和案例；</li>
-                    <li>了解<span>微信小程序</span>开发框架及组件，有进行微信小程序页面制作的经验和案例；</li>
-                    <li>了解Python和Java等常用后端语言的原生代码，有编写Python爬虫脚本的经验；</li>
+                    <li>了解<span>微信小程序</span>原生开发代码及组件，有进行微信小程序页面制作的经验和案例；</li>
+                    <li>对于Python和Java等后端语言有所了解，有辅助编写Python爬虫脚本和数据处理的经验；</li>
                     <li>能够使用<span>git</span>等工具进行团队合作。</li>
                 </ul>
             </td>
         </tr>
         <tr>
-            <th>工作经历</th>
+            <th>实习经历</th>
             <td colspan="6">               
                 <div>
                     <p>2019年4月--2019年9月</p>
                     <p>公司：中国农业科学院农业信息研究所</p>
-                    <p>职位：科研助理</p>
+                    <p>职位：科研助理（实习）</p>
                     <p>工作：辅助进行科研课题，编写Python爬虫、MATLAB处理数据等代码、参与发表2篇EI论文、投稿3篇专利进入审核、若干投标文件、会议报告等；</p>
                     <p>工作心得：在工作期间接触到了前后端多种常用编程语言，同时了解到从业人员对于未来互联网与5G相结合发展的预测和规划。我认为：5G时代的来临将加速网页和各类小程序在移动端和PC端上取代传统的客户端模式的步伐，前端具有广阔的前景和发展空间。</p>
                 </div>            
         </tr>
         <tr>
-            <th>项目经历</th>
+            <th>前端项目经历</th>
             <td colspan="6">
                 <div class="borderBottom">
                     <p>easyPage</p>
@@ -94,9 +94,9 @@
                     </p>
                 </div>               
                 <div>
-                    <p>优购物电商平台</p>
-                    <p>基于HTML/CSS和jQuery框架；</p>
-                    <p>负责按照设计稿完成网页搭建，并通过jQuery框架实现轮播图、电梯导航等效果；
+                    <p>优购物电商平台（PC端+微信小程序）</p>
+                    <p>基于HTML/CSS和jQuery、微信全家桶</p>
+                    <p>负责按照设计稿完成网页及小程序搭建；使用promise，ajax等技术解决函数回调和响应速度问题；
                         <br> 并制作了仿电商商品页简历，到我的GitHub仓库<a href="https://starduct.github.io/resume/">https://starduct.github.io/resume/</a> ，
                         同时链接有正常的网页简历（这份简历）<a href="https://starduct.github.io/resume/page.html">https://starduct.github.io/resume/page.html</a> 
                     </p>
